@startuml Colonies
    skinparam linetype ortho
    
    class House{
        -name:string
        +postalAddress:string
        -postalCode:integer
        -nameStreet: string
        +capacity: integer
        --
        +createHouse(name,postalCode,nameStreet,capacity,region)
        +readHouse()
        +updateHouse(?name,?capacity)
        +deleteHouse()
        +addKid(newKid)
        +addActivity(newActivity)
    }

    class Room{
        -id:integer
        +code: string
        --
        +createRoom(code,houseId)
        +readRoom()
        +updateRoom(?code)
        +deleteRoom()
    }

    class Activity{
        -evaluation: float
        +name: integer
        --
        +createActivity(name)
        +readActivity()
        +updateActivity(?name)
        +deleteActivity()
        +evaluateActivity(grade)
    }

    class Tutor{
        -name: string
        -phone: string
        --
        +createTutor(name,phone,houseId)
        +readTutor()
        +updateTutor(?name,?phone,?houseId)
        +deleteTutor()
    }

    class Director{
        --
        +createDirector(name,phone,houseId)
        +readDirector()
        +updateDirector(?name,?phone,?houseId)
        +deleteDirector()
    }

    class Kid{
        -name: string
        -parentsPhone: string
        --
        +createKid(name,parentsPhone,region)
        +readKid()
        +updateKid(?name,?parentsPhone,?regionId)
        +deleteKid()
    }

    class Region{
        -name: string
        +population: integer
        --
        +createRegion()
        +readRegion()
        +updateRegion()
        +deleteRegion()
        +addHabitant()
    }

    House *-- Room
    Kid --o House
    Tutor --* House
    Director --* House
    Director -up-|> Tutor
    Activity --o House
    Region <-- Kid
    Region <-left- House
@enduml